test/e2e/chainsaw/gateway/grpcroute-onprem/01-gatewayconfiguration.yaml
apiVersion: gateway-operator.konghq.com/v2beta1
kind: GatewayConfiguration
metadata:
  name: (join('-', [($test_name), 'gateway-configuration']))
  namespace: ($namespace)
spec:
  dataPlaneOptions:
    deployment:
      podTemplateSpec:
        spec:
          containers:
            - name: proxy
              image: ($gateway_image)
              readinessProbe:
                failureThreshold: 3
                initialDelaySeconds: 1
                periodSeconds: 1
                successThreshold: 1
                timeoutSeconds: 1
                httpGet:
                  path: /status/ready
                  port: 8100
                  scheme: HTTP
              env:
                - name: KONG_PROXY_LISTEN
                  value: '0.0.0.0:8000 reuseport backlog=16384, 0.0.0.0:8443 http2 ssl reuseport backlog=16384'
