test/e2e/chainsaw/gateway/grpcroute-onprem/02-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ($gateway_name)
  namespace: ($gateway_namespace)
spec:
  gatewayClassName: (join('-', [($test_name), 'gateway-class']))
  listeners:
    - name: grpc
      protocol: HTTPS
      port: 443
      hostname: ($grpc_host)
      tls:
        mode: Terminate
        certificateRefs:
          - name: ($cert_secret_name)
            namespace: ($cert_secret_namespace)
