test/e2e/chainsaw/gateway/grpcroute-onprem/02-grpcbin.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ($grpcbin_name)
  namespace: ($gateway_namespace)
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ($grpcbin_name)
  template:
    metadata:
      labels:
        app: ($grpcbin_name)
    spec:
      containers:
        - name: grpcbin
          image: ($grpcbin_image)
          ports:
            - containerPort: 9000
              name: grpc
---
apiVersion: v1
kind: Service
metadata:
  name: ($grpcbin_name)
  namespace: ($gateway_namespace)
  annotations:
    konghq.com/protocol: grpc
spec:
  selector:
    app: ($grpcbin_name)
  ports:
    - name: grpc
      protocol: TCP
      port: 80
      targetPort: 9000
