test/e2e/chainsaw/gateway/grpcroute-onprem/02-assert-gateway-without-grpcroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ($gateway_name)
  namespace: ($gateway_namespace)
status:
  (conditions[?type == 'Accepted']):
    - status: 'True'
      reason: Accepted
  (conditions[?type == 'Programmed']):
    - status: 'True'
      reason: Programmed
  (conditions[?type == 'DataPlaneReady']):
    - status: 'True'
      reason: Ready
  (conditions[?type == 'GatewayService']):
    - status: 'True'
      reason: Ready
  (listeners[?name == 'grpc']):
    - attachedRoutes: 0
      (conditions[?type == 'Accepted']):
        - status: 'True'
          reason: Accepted
      (conditions[?type == 'ResolvedRefs']):
        - status: 'True'
          reason: ResolvedRefs
      (supportedKinds[?kind == 'GRPCRoute']):
        - group: gateway.networking.k8s.io
          kind: GRPCRoute
